Fix padding on mobile devices

--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -65,7 +65,8 @@ header a:hover {
 }
 
 .section {
-    padding: 3em 0;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
 .intermezzo {
